Fixed too small media items

--- a/web/src/app/components/analyzed-videostore-card/analyzed-videostore-card.component.scss
+++ b/web/src/app/components/analyzed-videostore-card/analyzed-videostore-card.component.scss
@@ -1,3 +1,3 @@
 ion-card{
-  max-height: 40vh;
+  max-height: 50vh;
 }
