--- a/web/src/app/components/videostore-card/videostore-card.component.scss
+++ b/web/src/app/components/videostore-card/videostore-card.component.scss
@@ -10,5 +10,5 @@
   background: #e5e5e5;
 }
 ion-card{
-  max-height: 40vh;
+  max-height: 50vh;
 }
